k8s/ingress/traefik/controller/artifactory/artifactory-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: artifactory-ui-route
  namespace: devops-tools
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`artifactory.desarrollo`)
      kind: Rule
      services:
        - name: artifactory
          port: 8082
